# qtnm-tts

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-app.yml
docs/: Makefile  build_docs.sh
docs/source/: conf.py  contents.rst  index.rst
docs/source/api_reference/: build_index.py
docs/source/user_guide/: installation.rst
examples/circuits/: QFT_example.ipynb  amplification_example.ipynb  intro_registerbox.ipynb  lcu_multiplexor.ipynb  qcontrol_registerbox.ipynb  qubitisebox_example.ipynb  select_index_box.ipynb  trotter.ipynb
qtnmtts/: __init__.py
qtnmtts/_types/: _core_types.py
qtnmtts/_types/_type_stubs/pytket/utils/: operators.pyi
qtnmtts/circuits/amplitude_amplification/: __init__.py  _amplification_registerbox.py
qtnmtts/circuits/core/: __init__.py  _registerbox.py  power_registerbox.py  qcontrol_registerbox.py  register_circuit.py
qtnmtts/circuits/cswap/: __init__.py  _controlled_swap.py
qtnmtts/circuits/index/: __init__.py  index_registerbox.py
qtnmtts/circuits/index/method/: __init__.py  index_method_base.py  index_method_default.py  index_method_unary_iteration.py
qtnmtts/circuits/lcu/: __init__.py  _lcu_registerbox.py  lcu_custom.py  lcu_multiplexor.py
qtnmtts/circuits/lcu/index_operator/: __init__.py  index_operator.py
qtnmtts/circuits/lcu/process_operator/: multiplexed_operator.py
qtnmtts/circuits/prepare/: __init__.py  _prepare_registerbox.py  prepare_circbox.py  prepare_multiplexor.py  prepare_qrom.py
qtnmtts/circuits/qft/: __init__.py  standard_qft.py
qtnmtts/circuits/qubitisation/: __init__.py  qubitisation_registerbox.py
qtnmtts/circuits/reflection/: __init__.py  reflection_registerbox.py
qtnmtts/circuits/research/tts/: H_rh_qpo.pkl  RH_propagator.pkl  exp_ihdt_qpo.pkl  expand.py  mott_state.pkl  qbackend_data.csv  rh_lcu.ipynb  tts_lcu.ipynb
qtnmtts/circuits/select/: __init__.py  _select_registerbox.py  select_circbox.py  select_index_box.py  select_multiplexor.py
qtnmtts/circuits/trotter/: __init__.py  trotter_pauliexpbox.py
qtnmtts/circuits/utils/: __init__.py  _testing.py  block_encoding_utils.py  gqsp_utils.py  lcu_state_preparation_utils.py  lcu_utils.py  pytket_circboxes.py  qarithmetic_utils.py  qsvt_utils.py
qtnmtts/measurement/: __init__.py  phase_estimation.py  shots.py  statevector.py  utils.py
qtnmtts/utils/: linalg_utils.py
tests/: conftest.py
tests/circuits/amplification/: test_amplification.py
tests/circuits/core/: test_power_registerbox.py  test_qcontrol_control_registerbox.py  test_qreg_functions.py  test_register_circuit.py
tests/circuits/cswap/: test_cswap.py
tests/circuits/index/: test_index_box.py  test_index_unary_iteration.py
tests/circuits/lcu/: test_lcu.py  test_lcu_custom.py
tests/circuits/qft/: test_standard_qft.py
tests/circuits/qubitisation/: test_qubitisation.py
tests/circuits/reflection/: test_reflection_registerbox.py
tests/circuits/select/: test_select_index_box.py
tests/circuits/trotter/: test_trotter.py
tests/notebooks/: test_example_notebooks.py
